# ZeD_dev

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Test  cmake_install.cmake  main.cpp  main.cpp~
ZED_dev/: main.cpp
